Updating CORs for again
Signed-off-by: Olino3 <119822419+Olino3@users.noreply.github.com>

--- a/public/home.html
+++ b/public/home.html
@@ -51,7 +51,7 @@
                         redirect: 'follow',
                         mode: "cors",
                         header : {
-                            'Access-Control-Allow-Origin': 'https://olins-resume.com/',
+                            'Access-Control-Allow-Origin': 'https://olins-resume.com/home.html',
                             'Access-Control-Allow-Headers': '*',
                             'Access-Control-Allow-Methods': 'GET',
                             'Access-Control-Expose-Headers' : '*',
