--- a/public/home.html
+++ b/public/home.html
@@ -136,10 +136,7 @@
             </div>
             <div class="col-12 col-md">
                 <div class="text-wrapper">
-                    <p class="mbr-text mbr-fonts-style mb-4 display-7">I am a 3rd year student at Loyola Marymount University majoring in Computer Science, concurrently studying Cybersecurity and Cloud Computing at Santa Monica College.
-<br>
-<br>As a student of information security, I am deeply passionate about technology and the dialectic relationship between us and the digital systems we have created that in turn reshape many aspects of our lives. I aspire to be on the bleeding edge of modern technology, working to develop solutions to the growing questions of security and privacy in an increasing virtualized world.
-<br>
+                    <p class="mbr-text mbr-fonts-style mb-4 display-7">I am deeply passionate about technology and the dialectic relationship between us and the digital systems we have created that in turn reshape many aspects of our lives. I aspire to be on the bleeding edge of modern technology, working to develop solutions to the growing questions of security and privacy in an increasing virtualized world.
 <br>With years of hands-on experience in real world IT Support handling the everyday problems of end-users, proven ability in examining/exploiting/testing/automating digital practices with a specific emphasis on on the spaces of malware analysis, network intrusion, and cloud security. I am also deeply committed to the human side of technology, and have gained extensive experience in customer service and sales roles, which has taught me the skills needed to connect with others in empathetic and communicative manner.&nbsp;</p>
                     
                     
